integration_tests/codegen_fail/fail/union/enum_non_object_variant.stderr
error[E0277]: the trait bound `Test: GraphQLObjectType<__S>` is not satisfied
 --> $DIR/enum_non_object_variant.rs:9:10
  |
9 | #[derive(GraphQLUnion)]
  |          ^^^^^^^^^^^^ the trait `GraphQLObjectType<__S>` is not implemented for `Test`
  |
  = note: required by `juniper::marker::GraphQLObjectType::mark`
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
